# new-hse-ml-platform

./: .env  .gitignore  README.md  docker-compose.yml  tree.txt
executions/new_test/: input.csv
executions/nlp_sentiment_test/: input.csv  output.csv
executions/nlp_sentiment_test/explanation/: explanation.html
executions/nlp_test/: output.csv
executions/nlp_test/explanation/: explanation.html
ml_models/nlp_nl2ml/: Dockerfile  README.md  config.yaml  lime.ipynb  nlp_nl2ml_api.py  pyproject.toml
ml_models/nlp_nl2ml/artifacts/: predict_tag.py
ml_models/nlp_nl2ml/artifacts/models/: .gitignore  get_weights_from_here.txt  run_this_to_get_files.py
ml_models/nlp_sentiment_tfidf_lr/: Dockerfile  README.md  config.yaml  exec_script.py  nlp_sentiment_api.py  pyproject.toml  requirements.txt  setup_script.py
ml_models/nlp_sentiment_tfidf_lr/artifacts/models/: count_vect.pkl  logreg_bag_of_words.pickle  logreg_tfidf.pickle  naive_bayes_bag_of_words.pickle  tfidf_transformer.pkl
ml_models/nlp_sentiment_tfidf_lr/artifacts/sentiment/: sentiment.py  text_clean.py
orchestrator/: .gitignore  Dockerfile  __init__.py  pyproject.toml
orchestrator/configs/: config.py
orchestrator/database/: executions.py  ml_model.py
orchestrator/instance/: sqlite.db
orchestrator/routes/: __init__.py  debug.py  execution_initialization.py  model_execution.py
