[tool.poetry]
name = "nlp-sentiment-tfidf-lr"
version = "0.1.0"
description = "TBC"
authors = ["Ivan Skvortsov <iaskvortsov@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8"
absl-py = "1.2.0"
astunparse = "1.6.3"
cachetools = "5.2.0"
certifi = "2022.6.15"
charset-normalizer = "2.1.1"
click = "8.1.3"
DAWG-Python = "0.7.2"
docopt = "0.6.2"
flatbuffers = "1.12"
gast = "0.4.0"
grpcio = "1.47.0"
h5py = "3.7.0"
idna = "3.3"
joblib = "1.1.0"
libclang = "14.0.6"
Markdown = "3.4.1"
MarkupSafe = "2.1.1"
nltk = "3.7"
numpy = "1.23.2"
oauthlib = "3.2.0"
opt-einsum = "3.3.0"
packaging = "21.3"
pandas = "1.4.3"
protobuf = "3.19.4"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pymorphy2 = "0.9.1"
pymorphy2-dicts-ru = "2.4.417127.4579844"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
pytz = "2022.2.1"
regex = "2022.8.17"
requests = "2.28.1"
requests-oauthlib = "1.3.1"
rsa = "4.9"
scikit-learn = "1.1.1"
scipy = "1.9.1"
six = "1.16.0"
termcolor = "1.1.0"
threadpoolctl = "3.1.0"
tqdm = "4.64.0"
typing-extensions = "4.3.0"
urllib3 = "1.26.12"
wrapt = "1.14.1"
Flask = "^2.3.2"
flask-restx = "^1.1.0"
lime = "^0.2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
